pocketql-grammars/src/generated/java/com/pocketmath/pocketql/grammars/nfchecker/PocketQLNFCheckerParser.java
// Generated from /Users/etucker/IdeaProjects/stasov4/pocketql-grammars/src/main/resources/PocketQLNFChecker.g4 by ANTLR 4.5
package com.pocketmath.pocketql.grammars.nfchecker;

import com.pocketmath.stasov.util.StasovStrings;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class PocketQLNFCheckerParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.5", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, AND=2, OR=3, NOT=4, IN=5, W=6, ALPHANUM=7;
	public static final int
		RULE_normal_form = 0, RULE_terminal_leaf = 1, RULE_eq = 2;
	public static final String[] ruleNames = {
		"normal_form", "terminal_leaf", "eq"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'='"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, "AND", "OR", "NOT", "IN", "W", "ALPHANUM"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override
	@NotNull
	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "PocketQLNFChecker.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }


	public StringBuilder psb = new StringBuilder();
	public boolean changed = false;

	// convenience method
	private final static String conjoin(final String s1, final String s2, final String conjunction) {
	    return StasovStrings.conjoin(s1,s2,conjunction);
	}

	//
	// ALL-IMPORTANT :) METHODS FOR LOGGING / DEBUGGING
	//
	// TODO: Integrate with logging framework.
	//
	// Logging here is assumed to be fairly in depth or entirely off.  Logging of the parser
	// is considered low level in the overall perspective of the application.

	// (Intentionally short name.)
	/**
	 * Are we logging?
	 */
	protected boolean l() { return true; /* TODO: Set by configuration. */ }

	/**
	 * Log by rule with a message.
	 */
	protected void log(final String ruleName, final String msg) { System.out.println("[" + ruleName + "]: " + msg); }

	/**
	 * Log only that we're in the specified rule.
	 */
	protected void log(final String ruleName) { log(ruleName,""); }

	public PocketQLNFCheckerParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class Normal_formContext extends ParserRuleContext {
		public String value;
		public List<Terminal_leafContext> terminal_leaf() {
			return getRuleContexts(Terminal_leafContext.class);
		}
		public Terminal_leafContext terminal_leaf(int i) {
			return getRuleContext(Terminal_leafContext.class,i);
		}
		public List<TerminalNode> AND() { return getTokens(PocketQLNFCheckerParser.AND); }
		public TerminalNode AND(int i) {
			return getToken(PocketQLNFCheckerParser.AND, i);
		}
		public List<TerminalNode> W() { return getTokens(PocketQLNFCheckerParser.W); }
		public TerminalNode W(int i) {
			return getToken(PocketQLNFCheckerParser.W, i);
		}
		public List<TerminalNode> OR() { return getTokens(PocketQLNFCheckerParser.OR); }
		public TerminalNode OR(int i) {
			return getToken(PocketQLNFCheckerParser.OR, i);
		}
		public Normal_formContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_normal_form; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PocketQLNFCheckerListener ) ((PocketQLNFCheckerListener)listener).enterNormal_form(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PocketQLNFCheckerListener ) ((PocketQLNFCheckerListener)listener).exitNormal_form(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PocketQLNFCheckerVisitor ) return ((PocketQLNFCheckerVisitor<? extends T>)visitor).visitNormal_form(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Normal_formContext normal_form() throws RecognitionException {
		Normal_formContext _localctx = new Normal_formContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_normal_form);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(59);
			switch ( getInterpreter().adaptivePredict(_input,9,_ctx) ) {
			case 1:
				{
				setState(6); 
				terminal_leaf();
				setState(21);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
				while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1 ) {
						{
						{
						setState(8); 
						_errHandler.sync(this);
						_la = _input.LA(1);
						do {
							{
							{
							setState(7); 
							match(W);
							}
							}
							setState(10); 
							_errHandler.sync(this);
							_la = _input.LA(1);
						} while ( _la==W );
						setState(12); 
						match(AND);
						setState(14); 
						_errHandler.sync(this);
						_la = _input.LA(1);
						do {
							{
							{
							setState(13); 
							match(W);
							}
							}
							setState(16); 
							_errHandler.sync(this);
							_la = _input.LA(1);
						} while ( _la==W );
						setState(18); 
						terminal_leaf();
						}
						} 
					}
					setState(23);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
				}
				setState(25); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(24); 
					match(W);
					}
					}
					setState(27); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( _la==W );
				setState(55);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==OR) {
					{
					{
					setState(29); 
					match(OR);
					setState(31); 
					_errHandler.sync(this);
					_la = _input.LA(1);
					do {
						{
						{
						setState(30); 
						match(W);
						}
						}
						setState(33); 
						_errHandler.sync(this);
						_la = _input.LA(1);
					} while ( _la==W );
					setState(35); 
					terminal_leaf();
					setState(50);
					_errHandler.sync(this);
					_la = _input.LA(1);
					while (_la==W) {
						{
						{
						setState(37); 
						_errHandler.sync(this);
						_la = _input.LA(1);
						do {
							{
							{
							setState(36); 
							match(W);
							}
							}
							setState(39); 
							_errHandler.sync(this);
							_la = _input.LA(1);
						} while ( _la==W );
						setState(41); 
						match(AND);
						setState(43); 
						_errHandler.sync(this);
						_la = _input.LA(1);
						do {
							{
							{
							setState(42); 
							match(W);
							}
							}
							setState(45); 
							_errHandler.sync(this);
							_la = _input.LA(1);
						} while ( _la==W );
						setState(47); 
						terminal_leaf();
						}
						}
						setState(52);
						_errHandler.sync(this);
						_la = _input.LA(1);
					}
					}
					}
					setState(57);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				break;
			case 2:
				{
				setState(58); 
				terminal_leaf();
				}
				break;
			}

			        ((Normal_formContext)_localctx).value = getContext().getText();
			        if (l()) log("normal_form", "value=" + _localctx.value);
			        System.out.println("nf=" + _localctx.value);
			    
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Terminal_leafContext extends ParserRuleContext {
		public String value;
		public EqContext e;
		public TerminalNode NOT() { return getToken(PocketQLNFCheckerParser.NOT, 0); }
		public EqContext eq() {
			return getRuleContext(EqContext.class,0);
		}
		public List<TerminalNode> W() { return getTokens(PocketQLNFCheckerParser.W); }
		public TerminalNode W(int i) {
			return getToken(PocketQLNFCheckerParser.W, i);
		}
		public Terminal_leafContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_terminal_leaf; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PocketQLNFCheckerListener ) ((PocketQLNFCheckerListener)listener).enterTerminal_leaf(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PocketQLNFCheckerListener ) ((PocketQLNFCheckerListener)listener).exitTerminal_leaf(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PocketQLNFCheckerVisitor ) return ((PocketQLNFCheckerVisitor<? extends T>)visitor).visitTerminal_leaf(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Terminal_leafContext terminal_leaf() throws RecognitionException {
		Terminal_leafContext _localctx = new Terminal_leafContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_terminal_leaf);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(75);
			switch (_input.LA(1)) {
			case ALPHANUM:
				{
				setState(63); 
				((Terminal_leafContext)_localctx).e = eq();

				        ((Terminal_leafContext)_localctx).value =  ((Terminal_leafContext)_localctx).e.value;
				    
				}
				break;
			case NOT:
				{
				setState(66); 
				match(NOT);
				setState(68); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(67); 
					match(W);
					}
					}
					setState(70); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( _la==W );
				setState(72); 
				((Terminal_leafContext)_localctx).e = eq();

				        ((Terminal_leafContext)_localctx).value =  "NOT " + ((Terminal_leafContext)_localctx).e.value;
				    
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			         System.out.println("VALUE: " + _localctx.value); 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class EqContext extends ParserRuleContext {
		public String value;
		public Token a;
		public Token b;
		public List<TerminalNode> ALPHANUM() { return getTokens(PocketQLNFCheckerParser.ALPHANUM); }
		public TerminalNode ALPHANUM(int i) {
			return getToken(PocketQLNFCheckerParser.ALPHANUM, i);
		}
		public List<TerminalNode> W() { return getTokens(PocketQLNFCheckerParser.W); }
		public TerminalNode W(int i) {
			return getToken(PocketQLNFCheckerParser.W, i);
		}
		public EqContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_eq; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PocketQLNFCheckerListener ) ((PocketQLNFCheckerListener)listener).enterEq(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PocketQLNFCheckerListener ) ((PocketQLNFCheckerListener)listener).exitEq(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PocketQLNFCheckerVisitor ) return ((PocketQLNFCheckerVisitor<? extends T>)visitor).visitEq(this);
			else return visitor.visitChildren(this);
		}
	}

	public final EqContext eq() throws RecognitionException {
		EqContext _localctx = new EqContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_eq);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(79); 
			((EqContext)_localctx).a = match(ALPHANUM);
			setState(83);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==W) {
				{
				{
				setState(80); 
				match(W);
				}
				}
				setState(85);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(86); 
			match(T__0);
			setState(90);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==W) {
				{
				{
				setState(87); 
				match(W);
				}
				}
				setState(92);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(93); 
			((EqContext)_localctx).b = match(ALPHANUM);
			}
			 ((EqContext)_localctx).value =  ((EqContext)_localctx).a.getText() + "=" + ((EqContext)_localctx).b.getText(); if (l()) log("eq", "value=" + _localctx.value); 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static final ATN _ATN =
		new ATNDeserializer().deserialize(_serializedATN.toCharArray());
	static {
		_decisionToDFA = new DFA[_ATN.getNumberOfDecisions()];
		for (int i = 0; i < _ATN.getNumberOfDecisions(); i++) {
			_decisionToDFA[i] = new DFA(_ATN.getDecisionState(i), i);
		}
	}
}